--- a/sunday-static/common/admin/user/detail.html
+++ b/sunday-static/common/admin/user/detail.html
@@ -1,30 +1,29 @@
-
-	<div style="padding:10px 0 10px 60px" id="updateUserMsg">
-	   <form id="uadminUserUpdateForm" method="post" action="admin/user/simpleUpdate" enctype="multipart/form-data">
-	   <input  name="id" type="hidden"/>
-	   <input  name="orgId" type="hidden" value=""/>
-	   <input  name="postId" type="hidden" value=""/>
-	   <input  name="type" type="hidden" value=""/>
-	   <input name="userOrgPostIsManager" type="hidden" value="1"/>
+<div style="padding:10px 0 10px 60px" id="updateUserMsg">
+	<form id="uadminUserUpdateForm" method="post" action="admin/user/simpleUpdate" enctype="multipart/form-data">
+		<input  name="id" type="hidden"/>
+	   	<input  name="orgId" type="hidden" value=""/>
+	   	<input  name="postId" type="hidden" value=""/>
+	   	<input  name="type" type="hidden" value=""/>
+	   	<input name="userOrgPostIsManager" type="hidden" value="1"/>
 	    <table>
 			<tr>
-				<td>用户名:</td>
+				<td>用户名：</td>
 				<td><input name="username" autoComplete="off" class="easyui-validatebox" type="text"  data-options="required:true"></input></td>
 			</tr>
 			<tr>
-				<td>姓名:</td>
-				<td><input name="name" autoComplete="off" class="easyui-validatebox" type="text"  data-options="required:true"></input></td>
+				<td>姓名：</td>
+				<td><input name="name" class="easyui-validatebox" type="text"  data-options="required:true"></input></td>
 			</tr>
 			<tr>
-				<td>Email:</td>
-				<td><input name="enamil" autoComplete="off" class="easyui-validatebox" type="text"  data-options="validType:'email'"></input></td>
+				<td>Email：</td>
+				<td><input name="enamil" class="easyui-validatebox" type="text"  data-options="validType:'email'"></input></td>
 			</tr>
 			<tr>
-				<td>手机号码:</td>
-				<td><input name="mobi" autoComplete="off" class="easyui-validatebox" type="text"  data-options="required:true"></input></td>
+				<td>手机号码：</td>
+				<td><input name="mobi" class="easyui-validatebox" type="text"  data-options="required:true"></input></td>
 			</tr>
 			<tr>
-				<td>头像:</td>
+				<td>头像：</td>
 				<td>
 					<input name="logos" type="file"  data-options="required:true"></input>
 				</td>
@@ -35,26 +34,26 @@
 				</td>
 			</tr>
 			<tr>
-				<td>选择城市</td>
+				<td>选择城市：</td>
 				<td>
-					<select id="uprovinceId" name="provinceId"></select>
-					<select id="udistrictId" name="districtId"></select>
-					<select id="ucityId" name="cityId"></select>
+					<select id="singleProvinceId" name="provinceId"></select>
+					<select id="singleDistrictId" name="districtId"></select>
+					<select id="singleCityId" name="cityId"></select>
 				</td>
 			</tr>
 			<tr>
-				<td>生日:</td>
+				<td>生日：</td>
 				<td><input class="easyui-datebox"  name="birthday" style="width:80px"></input></td>
 			</tr>
 			<tr>
-				<td>性别:</td>
+				<td>性别：</td>
 				<td>
 					<input name="sex" class="easyui-validatebox" type="radio" value="1">男
 					<input name="sex" class="easyui-validatebox" type="radio" value="2">女
 				</td>
 			</tr>
 			<tr style="display:none;">
-				<td>是否管理者:</td>
+				<td>是否管理者：</td>
 				<td>
 				    <input name="userOrgPostId" value="" type="hidden">
 					<input name="userOrgPostIsManager" value="0" type="radio" checked>是
@@ -71,11 +70,12 @@
 	            </td>
 	        </tr>
 		</table>
-	  </form>
-	</div>
-		<div data-options="region:'center',title:'用户管理',iconCls:'icon-ok'">
-	
-<script>
+	</form>
+</div>
+		
+<div data-options="region:'center',title:'用户管理',iconCls:'icon-ok'"></div>
+
+<script type="text/javascript">
 
 	$.ajax({
 		url:'/admin/user/getUpdateUserInfo',
@@ -95,7 +95,7 @@
 				data.userOrgPostId=data.userOrgPost.id;
 				data.userOrgPostIsManager=data.userOrgPost.isManager;
 			}
-			doInitCitySelect("uprovinceId","udistrictId","ucityId",data.adminUser.provinceId,data.adminUser.districtId,data.adminUser.cityId);
+			doInitCitySelect("singleProvinceId", "singleDistrictId", "singleCityId", data.adminUser.provinceId, data.adminUser.districtId, data.adminUser.cityId);
 			$("#uadminUserLogtr").show();
 			if(data.logo){
 				var ipth = img_path+data.logo;
@@ -103,21 +103,17 @@
 			}
 			$('#uadminUserUpdateForm').form('load',data);
 		}
-			
 	});
 	
 	$("#uadminUserUpdateForm").form({
 		success:function(rec){
 			if(rec=="success"){
 				parent.$("#mailwindowdiv").window('close');
-				jQuery.messager.alert("提示","修改成功！");
+				jQuery.messager.alert('info', "修改成功~", 'info');
 			}else{
-				jQuery.messager.alert("提示","修改失败！");
+				jQuery.messager.alert('info', "修改失败~", 'info');
 			}
 		}
-	})
-
-
-
+	});
+	
 </script>
-	</div>
