--- a/sunday-static/comm/admin/testAsny.html
+++ b/sunday-static/comm/admin/testAsny.html
@@ -33,7 +33,7 @@
 	<a href="javascript:doAsynUpload('1_3')">点击换图片</a>
 	
 	<div id="woxxxx"  style="border:4px solid #E8E8E8;position:absolute;z-index:6000;background:#fff;margin-top:10px;display:none;width:300px;height:100px;">
-		<iframe src="/singleAsnyUpload"  frameborder=0/>
+		<iframe src="/singleAsnyUpload"  frameborder=0></iframe>
 	</div>
 </body>
 
